[workspace]
members = ["mavlink", "mavlink-bindgen", "mavlink-core"]
resolver = "1"

[workspace.dependencies]
crc-any = { version = "2.3.5", default-features = false }
num-traits = { version = "0.2", default-features = false }
num-derive = "0.3.2"
bitflags = "1.2.1"
byteorder = { version = "1.3.4", default-features = false }

[workspace.lints.clippy]
all = "deny"
pedantic = "warn"
nursery = "warn"
