[workspace]
members = ["mavlink", "mavlink-bindgen", "mavlink-core"]
resolver = "1"

[workspace.dependencies]
crc-any = { version = "2.3.5", default-features = false }
num-traits = { version = "0.2", default-features = false }
num-derive = "0.4"
bitflags = "2.8.0"
byteorder = { version = "1.3.4", default-features = false }

[workspace.package]
edition = "2021"
rust-version = "1.70.0"
