[workspace]
members = ["mavlink", "mavlink-bindgen", "mavlink-core"]
resolver = "1"

[workspace.dependencies]
crc-any = { version = "2.3.5", default-features = false }
num-traits = { version = "0.2", default-features = false }
num-derive = "0.4"
bitflags = { version = "2.9.1", default-features = false }
byteorder = { version = "1.3.4", default-features = false }

[workspace.package]
edition = "2021"
rust-version = "1.80.0"
keywords = ["mavlink", "parser", "protocol", "embedded"]
categories = ["aerospace", "aerospace::protocols", "parsing", "embedded"]

[workspace.lints.clippy]
cargo = { level = "warn", priority = -1 }
multiple_crate_versions  = "allow"
semicolon_if_nothing_returned = "warn"
unnecessary_semicolon = "warn"
uninlined_format_args = "warn"
use_self = "warn"
