[package]
name = "mavlink-bindgen"
version = "0.13.2"
edition.workspace = true
license = "MIT/Apache-2.0"
description = "Library used by rust-mavlink."
readme = "README.md"
repository = "https://github.com/mavlink/rust-mavlink"
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crc-any = { workspace = true, default-features = false }
quick-xml = "0.36"
quote = "1"
proc-macro2 = "1.0.43"
lazy_static = "1.2.0"
serde = { version = "1.0.115", optional = true, features = ["derive"] }
clap = { version = "~4.3.24", optional = true, default-features =false, features = ["derive", "help", "usage", "error-context"] }
thiserror = "1.0.56"

# Required to support MSRV 1.65.0
clap_lex = { version = "=0.5.0", optional=true }
clap_builder = { version = "~4.3.24", optional=true}
anstyle = { version = "=1.0.2", optional=true }
anstyle-query = { version = "=1.0.0", optional=true }
anstyle-parse = { version = "=0.2.1", optional=true }

[features]
cli = ["dep:clap", "dep:clap_lex", "dep:clap_builder", "dep:anstyle", "dep:anstyle-query", "dep:anstyle-parse"]
emit-extensions = []
emit-description = []
