[package]
name = "mavlink-bindgen"
version = "0.17.1"
edition.workspace = true
license = "MIT/Apache-2.0"
description = "Library used by rust-mavlink."
readme = "README.md"
repository = "https://github.com/mavlink/rust-mavlink"
rust-version.workspace = true
keywords = ['mavlink', 'cli', "generator", "parser", "xml"]
categories.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anstyle = { version = "1.0.11", optional = true }
anstyle-parse = { version = "1.0.0", optional = true }
anstyle-query = { version = "1.1.4", optional = true }
arbitrary = { version = "1.4", optional = true, features = ["derive"] }
clap = { version = "~4.5.48", optional = true, default-features =false, features = ["derive", "help", "usage", "error-context"] }
clap_builder = { version = "4.3.24", optional = true}
clap_lex = { version = "0.7.5", optional = true }
crc-any = { workspace = true, default-features = false }
proc-macro2 = "1.0.43"
quick-xml = "0.39"
quote = "1"
rand = { version = "0.9", optional = true, default-features = false, features = ["std", "std_rng"] }
regex = { version = "1.0" }
serde = { version = "1.0.115", optional = true, features = ["derive"] }
thiserror = { version = "2.0.12", default-features = false }

[features]
cli = ["dep:clap", "dep:clap_lex", "dep:clap_builder", "dep:anstyle", "dep:anstyle-query", "dep:anstyle-parse"]
arbitrary = ["dep:arbitrary", "dep:rand"]
emit-extensions = []

[dev-dependencies]
insta = { version = "1.39.0", features = ["glob"] }
tempfile = "3.10.1"

[lints]
workspace = true
