[package]
name = "mavlink-core"
version = "0.13.1"
authors = [
    "Todd Stellanova",
    "Michal Podhradsky",
    "Kevin Mehall",
    "Tim Ryan",
    "Patrick José Pereira",
    "Ibiyemi Abiodun",
]
description = "Implements the MAVLink data interchange format for UAVs."
readme = "README.md"
license = "MIT/Apache-2.0"
repository = "https://github.com/mavlink/rust-mavlink"
edition = "2018"
rust-version = "1.65.0"

[dependencies]
crc-any = { workspace = true, default-features = false }
byteorder = { workspace = true, default-features = false }
nb = { version = "1.0", optional = true }
embedded-hal-02 = { version = "0.2", optional = true, package = "embedded-hal" }
embedded-io = { version = "0.6.1", optional = true }
embedded-io-async = { version = "0.6.1", optional = true }
serde = { version = "1.0.115", optional = true, features = ["derive"] }
serde_arrays = { version = "0.1.0", optional = true }
serial = { version = "0.4", optional = true }

[features]
"std" = ["byteorder/std"]
"udp" = []
"tcp" = []
"direct-serial" = ["serial"]
# NOTE: Only one of 'embedded' and 'embedded-hal-02' features can be enabled.
# Use "embedded' feature to enable embedded-hal=1.0 (embedded-io and embedded-io-async is part of embedded-hal).
# Use 'embedded-hal-0.2' feature to enable deprecated embedded-hal=0.2.3 (some hals is not supports embedded-hal=1.0 yet).
"embedded" = ["dep:embedded-io", "dep:embedded-io-async"]
"embedded-hal-02" = ["dep:nb", "dep:embedded-hal-02"]
"serde" = ["dep:serde", "dep:serde_arrays"]
default = ["std", "tcp", "udp", "direct-serial", "serde"]
