[package]
name = "mavlink-core"
version = "0.17.1"
authors = [
    "Todd Stellanova",
    "Michal Podhradsky",
    "Kevin Mehall",
    "Tim Ryan",
    "Patrick José Pereira",
    "Ibiyemi Abiodun",
]
description = "Implements the MAVLink data interchange format for UAVs."
readme = "../README.md"
license = "MIT/Apache-2.0"
repository = "https://github.com/mavlink/rust-mavlink"
edition.workspace = true
rust-version.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
arbitrary = { version = "1.4", optional = true, features = ["derive"] }
async-trait = { version = "0.1.18", optional = true }
byteorder = { workspace = true, default-features = false }
crc-any = { workspace = true, default-features = false }
embedded-io = { version = "0.7", optional = true }
embedded-io-async = { version = "0.7", optional = true }
futures = { version = "0.3", default-features = false, optional = true }
rand = { version = "0.9", optional = true, default-features = false, features = ["std", "std_rng"] }
serde = { version = "1.0.115", optional = true, features = ["derive"] }
serde_arrays = { version = "0.2.0", optional = true }
serialport = { version = "4.7.2", default-features = false, optional = true }
sha2 = { version = "0.10", optional = true }
tokio = { version = "1.0", default-features = false, features = ["io-util", "net", "fs"], optional = true }
tokio-serial = { version = "5.4.4", default-features = false, optional = true }

[features]
default = [
    "std",
    "transport-tcp",
    "transport-udp",
    "transport-direct-serial",
    "serde",
]

std = ["byteorder/std"]
transport-udp = []
transport-tcp = []
transport-direct-serial = ["serialport"]
embedded = ["dep:embedded-io", "dep:embedded-io-async"]
serde = ["dep:serde", "dep:serde_arrays"]
tokio = [
    "dep:tokio",
    "dep:async-trait",
    "dep:tokio-serial",
    "dep:futures",
]
mav2-message-signing = ["dep:sha2"]
arbitrary = ["dep:arbitrary", "dep:rand"]

[dev-dependencies]
tokio = { version = "1.0", default-features = false, features = ["io-util", "net", "fs", "macros", "rt"] }

[lints] 
workspace = true
