
[package]
name = "mavlink"
version = "0.13.3"
authors = [
    "Todd Stellanova",
    "Michal Podhradsky",
    "Kevin Mehall",
    "Tim Ryan",
    "Patrick José Pereira",
    "Ibiyemi Abiodun",
]
build = "build/main.rs"
description = "Implements the MAVLink data interchange format for UAVs."
readme = "../README.md"
license = "MIT/Apache-2.0"
repository = "https://github.com/mavlink/rust-mavlink"
edition.workspace = true
rust-version.workspace = true

[build-dependencies]
mavlink-bindgen = { path = "../mavlink-bindgen", default-features = false }

[[example]]
name = "mavlink-dump"
path = "examples/mavlink-dump/src/main.rs"
required-features = ["ardupilotmega"]

[dependencies]
mavlink-core = { path = "../mavlink-core", default-features = false }
num-traits = { workspace = true, default-features = false }
num-derive = { workspace = true }
bitflags = { workspace = true }
serde = { version = "1.0.115", optional = true, features = ["derive"] }
serde_arrays = { version = "0.1.0", optional = true }

[features]
"all" = [
    "ardupilotmega",
    "asluav",
    "common",
    "development",
    "icarous",
    "minimal",
    "python_array_test",
    "standard",
    "test",
    "ualberta",
    "uavionix",
    "avssuas",
    "cubepilot",
]
"ardupilotmega" = ["common", "icarous", "uavionix"]
"asluav" = ["common"]
"avssuas" = ["common"]
"development" = ["common"]
"matrixpilot" = ["common"]
"minimal" = []
"paparazzi" = ["common"]
"python_array_test" = ["common"]
"slugs" = ["common"]
"standard" = ["common"]
"test" = []
"ualberta" = ["common"]
"uavionix" = ["common"]
"icarous" = []
"common" = []
"cubepilot" = ["common"]

"all-dialects" = [
    "ardupilotmega",
    "asluav",
    "avssuas",
    "development",
    "matrixpilot",
    "minimal",
    "paparazzi",
    "python_array_test",
    "slugs",
    "standard",
    "test",
    "ualberta",
    "uavionix",
    "icarous",
    "common",
    "cubepilot",
]

"format-generated-code" = []
"emit-description" = ["mavlink-bindgen/emit-description"]
"emit-extensions" = ["mavlink-bindgen/emit-extensions"]
"std" = ["mavlink-core/std"]
"udp" = ["mavlink-core/udp"]
"tcp" = ["mavlink-core/tcp"]
"signing" = ["mavlink-core/signing"]
"direct-serial" = ["mavlink-core/direct-serial"]
# NOTE: Only one of 'embedded' and 'embedded-hal-02' features can be enabled.
# Use "embedded' feature to enable embedded-hal=1.0 (embedded-io and embedded-io-async is part of embedded-hal).
# Use 'embedded-hal-0.2' feature to enable deprecated embedded-hal=0.2.3 (some hals is not supports embedded-hal=1.0 yet).
"embedded" = ["mavlink-core/embedded"]
"embedded-hal-02" = ["mavlink-core/embedded-hal-02"]
"serde" = ["mavlink-core/serde", "dep:serde", "dep:serde_arrays"]
"tokio-1" = ["mavlink-core/tokio-1"]
default = ["std", "tcp", "udp", "direct-serial", "serde", "ardupilotmega"]

# build with all features on docs.rs so that users viewing documentation
# can see everything
[package.metadata.docs.rs]
features = [
    "default",
    "all-dialects",
    "emit-description",
    "emit-extensions",
    "format-generated-code",
    "tokio-1",
    "signing"
]

[dev-dependencies]
tokio = { version = "1.0", default-features = false, features = ["macros", "rt", "time" ] }
