
[package]
name = "mavlink"
version = "0.17.1"
authors = [
    "Todd Stellanova",
    "Michal Podhradsky",
    "Kevin Mehall",
    "Tim Ryan",
    "Patrick José Pereira",
    "Ibiyemi Abiodun",
]
build = "build/main.rs"
description = "Implements the MAVLink data interchange format for UAVs."
readme = "../README.md"
license = "MIT/Apache-2.0"
repository = "https://github.com/mavlink/rust-mavlink"
edition.workspace = true
rust-version.workspace = true
keywords.workspace = true
categories.workspace = true

[build-dependencies]
mavlink-bindgen = { version = "=0.17.1", path = "../mavlink-bindgen", default-features = false }

[[example]]
name = "mavlink-dump"
path = "examples/mavlink-dump/src/main.rs"
required-features = ["ardupilotmega"]

[dependencies]
mavlink-core = { version="=0.17.1", path = "../mavlink-core", default-features = false }
num-traits = { workspace = true, default-features = false }
num-derive = { workspace = true }
bitflags = { workspace = true }
serde = { version = "1.0.115", optional = true, features = ["derive"] }
serde_arrays = { version = "0.2.0", optional = true }
arbitrary = { version = "1.4", optional = true, features = ["derive"] }
rand = { version = "0.9", optional = true, default-features = false, features = ["std", "std_rng"] }
ts-rs = { version = "11.0.1", optional = true }

[features]
default = ["std", "tcp", "udp", "direct-serial", "serde", "ardupilotmega", "common", "format-generated-code"]

all = []
ardupilotmega = []
asluav = []
avssuas = []
development = []
matrixpilot = []
minimal = []
paparazzi = []
python_array_test = []
standard = []
test = []
ualberta = []
uavionix = []
icarous = []
common = []
cubepilot = []
csairlink = []
loweheiser = []
storm32 = []
marsh = []
stemstudios = []

all-dialects = [
    "ardupilotmega",
    "asluav",
    "avssuas",
    "development",
    "matrixpilot",
    "minimal",
    "paparazzi",
    "python_array_test",
    "standard",
    "test",
    "ualberta",
    "uavionix",
    "icarous",
    "common",
    "cubepilot",
    "storm32",
    "csairlink",
    "loweheiser",
    "marsh",
    "stemstudios",
]

format-generated-code = []
emit-extensions = ["mavlink-bindgen/emit-extensions"]
std = ["mavlink-core/std"]
udp = ["mavlink-core/udp"]
tcp = ["mavlink-core/tcp"]
signing = ["mavlink-core/signing"]
direct-serial = ["mavlink-core/direct-serial"]
# NOTE: Only one of 'embedded' and 'embedded-hal-02' features can be enabled.
# Use "embedded' feature to enable embedded-hal=1.0 (embedded-io and embedded-io-async is part of embedded-hal).
# Use 'embedded-hal-0.2' feature to enable deprecated embedded-hal=0.2.3 (some hals is not supports embedded-hal=1.0 yet).
embedded = ["mavlink-core/embedded"]
embedded-hal-02 = ["mavlink-core/embedded-hal-02"]
serde = ["bitflags/serde", "dep:serde", "dep:serde_arrays", "mavlink-core/serde"]
tokio-1 = ["mavlink-core/tokio-1"]
arbitrary = ["dep:arbitrary", "dep:rand", "mavlink-bindgen/arbitrary", "mavlink-core/arbitrary", "bitflags/arbitrary"]
# Used for typescript generation
ts = ["dep:ts-rs"]

# build with all features on docs.rs so that users viewing documentation
# can see everything
[package.metadata.docs.rs]
features = [
    "default",
    "arbitrary",
    "all-dialects",
    "emit-extensions",
    "format-generated-code",
    "tokio-1",
    "signing"
]

[dev-dependencies]
tokio = { version = "1.0", default-features = false, features = ["macros", "rt", "time" ] }
serde_json = { version = "1.0", features = ["preserve_order"] }
serde_test = "1.0"

[lints]
workspace = true
