
[package]
name = "mavlink"
version = "0.17.1"
authors = [
    "Todd Stellanova",
    "Michal Podhradsky",
    "Kevin Mehall",
    "Tim Ryan",
    "Patrick José Pereira",
    "Ibiyemi Abiodun",
]
build = "build/main.rs"
description = "Implements the MAVLink data interchange format for UAVs."
readme = "../README.md"
license = "MIT/Apache-2.0"
repository = "https://github.com/mavlink/rust-mavlink"
edition.workspace = true
rust-version.workspace = true
keywords.workspace = true
categories.workspace = true

[build-dependencies]
mavlink-bindgen = { version = "=0.17.1", path = "../mavlink-bindgen", default-features = false }

[[example]]
name = "mavlink-dump"
path = "examples/mavlink-dump/src/main.rs"
required-features = ["dialect-ardupilotmega"]

[dependencies]
mavlink-core = { version="=0.17.1", path = "../mavlink-core", default-features = false }
num-traits = { workspace = true, default-features = false }
num-derive = { workspace = true }
bitflags = { workspace = true }
serde = { version = "1.0.115", optional = true, features = ["derive"] }
serde_arrays = { version = "0.2.0", optional = true }
arbitrary = { version = "1.4", optional = true, features = ["derive"] }
rand = { version = "0.9", optional = true, default-features = false, features = ["std", "std_rng"] }
ts-rs = { version = "11.0.1", optional = true }

[features]
default = [
    "std",
    "transport-tcp",
    "transport-udp",
    "transport-direct-serial",
    "serde",
    "dialect-ardupilotmega",
    "dialect-common",
    "format-generated-code",
]

transport-tcp = ["mavlink-core/transport-tcp"]
transport-udp = ["mavlink-core/transport-udp"]
transport-direct-serial = ["mavlink-core/transport-direct-serial"]

mav2-message-extensions = ["mavlink-bindgen/mav2-message-extensions"]
mav2-message-signing = ["mavlink-core/mav2-message-signing"]

dialect-all = []
dialect-ardupilotmega = []
dialect-asluav = []
dialect-avssuas = []
dialect-common = []
dialect-csairlink = []
dialect-cubepilot = []
dialect-development = []
dialect-icarous = []
dialect-loweheiser = []
dialect-marsh = []
dialect-matrixpilot = []
dialect-minimal = []
dialect-paparazzi = []
dialect-python_array_test = []
dialect-standard = []
dialect-stemstudios = []
dialect-storm32 = []
dialect-test = []
dialect-ualberta = []
dialect-uavionix = []

std = ["mavlink-core/std"]
embedded = ["mavlink-core/embedded"]
tokio = ["mavlink-core/tokio"]
serde = [
    "bitflags/serde",
    "dep:serde",
    "dep:serde_arrays",
    "mavlink-core/serde",
]
arbitrary = [
    "dep:arbitrary",
    "dep:rand",
    "mavlink-bindgen/arbitrary",
    "mavlink-core/arbitrary",
    "bitflags/arbitrary",
]
format-generated-code = []
ts-rs = ["dep:ts-rs"]

[package.metadata.docs.rs]
# Build with all features on docs.rs so that users viewing documentation
# can see everything
all-features = true

[dev-dependencies]
tokio = { version = "1.0", default-features = false, features = ["macros", "rt", "time" ] }
serde_json = { version = "1.0", features = ["preserve_order"] }
serde_test = "1.0"

[lints]
workspace = true
