[package]
name = "mavlink-dump"
authors = [
    "Patrick José Pereira <patrickelectric@gmail.com>",
    "Roberto Petrisoru <roby2x14@gmail.com>",
]
license = "MIT/Apache-2.0"
edition = "2018"
version = "0.1.0"

[profile.release]
opt-level = 3
lto = true    # Performs "fat" LTO which attempts to perform optimizations across all crates within the dependency graph

[dependencies.mavlink] # MAVLink library
path = "../../"

[dependencies]
tokio = { version = "1.40.0", default-features = false }
